--- a/workload/package.json
+++ b/workload/package.json
@@ -10,6 +10,12 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "distinct-colors": "^3.0.0",
+    "express": "^4.17.1",
+    "express-handlebars": "^5.2.0",
+    "open": "^7.3.1",
+    "randomcolor": "^0.6.2",
     "yargs": "^16.2.0"
-  }
+  },
+  "devDependencies": {}
 }
