--- a/workload/package.json
+++ b/workload/package.json
@@ -10,11 +10,14 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "chalk": "^4.1.0",
     "distinct-colors": "^3.0.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.2.0",
     "open": "^7.3.1",
     "randomcolor": "^0.6.2",
+    "sequelize": "^6.3.5",
+    "sqlite3": "^5.0.1",
     "yargs": "^16.2.0"
   },
   "devDependencies": {}
